
METASOURCES = AUTO

noinst_LIBRARIES = libExtensions.a



#check_PROGRAMS = servicetest
#servicetest_SOURCES = ServiceTest.cpp
#servicetest_CXXFLAGS = -I$(srcdir)/..
#servicetest_LDFLAGS = test/libTestService.a config/libConfigService.a metaserver/libMetaserverService.a #image/libImageService.a logging/libLoggingService.a ../framework/libFramework.a
libExtensions_a_SOURCES =  Atlas/Operations/Wield.cpp Atlas/Operations/Wield.h Atlas/Operations/Use.cpp Atlas/Operations/Use.h
